[workspace]
resolver = "2"

members = [
    "examples/Advanced",
    "examples/Simple",
    "examples/SimpleSled",
    "crates/lux-camp-badge",
    "crates/lux-camp-badge-animations"
]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
strip = true
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
